// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NeonHeader renders fallback with drupalCSSLoaded prop and error NeonContext state 1`] = `
<header
  className="makeStyles-unstickyHeader-3 makeStyles-headerContainer-5 makeStyles-headerContainerFallback-4"
  id="header"
>
  <div>
    MOCK-FALLBACK-DRUPAL-HEADER-HTML
  </div>
</header>
`;

exports[`NeonHeader renders with drupalCssLoaded prop and success NeonContext state 1`] = `
<header
  className="makeStyles-unstickyHeader-3 makeStyles-headerContainer-5"
  id="header"
>
  <div>
    test drupal html
  </div>
</header>
`;

exports[`NeonHeader renders with drupalCssLoaded prop, success NeonContext state, and core auth 1`] = `
<header
  className="makeStyles-unstickyHeader-3 makeStyles-headerContainer-5"
  id="header"
>
  <div>
    test drupal html
  </div>
</header>
`;

exports[`NeonHeader renders with no props and active/fetching NeonContext state 1`] = `
<header
  className="makeStyles-unstickyHeader-3 makeStyles-headerContainer-5 makeStyles-headerContainerFallback-4"
  id="header"
>
  <div>
    MOCK-FALLBACK-DRUPAL-HEADER-HTML
  </div>
</header>
`;

exports[`NeonHeader renders with no props and error NeonContext state 1`] = `
<header
  className="makeStyles-unstickyHeader-3 makeStyles-headerContainer-5 makeStyles-headerContainerFallback-4"
  id="header"
>
  <div>
    MOCK-FALLBACK-DRUPAL-HEADER-HTML
  </div>
</header>
`;

exports[`NeonHeader renders with no props and inactive NeonContext state 1`] = `
<header
  className="makeStyles-unstickyHeader-3 makeStyles-headerContainer-5 makeStyles-headerContainerFallback-4"
  id="header"
>
  <div>
    MOCK-FALLBACK-DRUPAL-HEADER-HTML
  </div>
</header>
`;

exports[`NeonHeader renders with no props and success NeonContext state 1`] = `
<header
  className="makeStyles-unstickyHeader-3 makeStyles-headerContainer-5 makeStyles-headerContainerFallback-4"
  id="header"
>
  <div>
    MOCK-FALLBACK-DRUPAL-HEADER-HTML
  </div>
</header>
`;
